Fix focus style on IE

--- a/main/src/scss/opintoni/_accessibility.scss
+++ b/main/src/scss/opintoni/_accessibility.scss
@@ -36,5 +36,5 @@ body:hover .visually-hidden button {
 }
 
 :focus {
-  outline: auto 5px $focus-color !important;
+  outline: solid 5px $focus-color !important;
 }
